<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".customErrorDialog">


    <TextView
        android:id="@+id/txtDialogTitle"
        android:layout_width="300dp"
        android:layout_height="128dp"
        android:background="#DE2B2B"
        android:gravity="center"
        android:text="@string/txtErrorDialogTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primaryDarkColor"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtErrorDialogMsg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txtErrorDialogText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDialogTitle" />

    <Button
        android:id="@+id/btnErrorDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#DE2B2B"
        android:gravity="center"
        android:text="@string/btnErrorDialog"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="#DE2B2B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtErrorDialogMsg" />
</androidx.constraintlayout.widget.ConstraintLayout>